examples/errors/try_catch_helper.molt
import errors from "std:errors"

errors.throw(errors.error("helper failed", record { source: "import" }))
